--- a/index.html
+++ b/index.html
@@ -9,33 +9,36 @@
 </head>
 <body>
     <div class="container">
-        <h1>MY LIBRARY</h1>
+        <h1>=====MY LIBRARY====</h1>
         <h2 class="list">Book List</h2>
-        <div class="books"></div>
+        <main>
+            <div class="books"></div>
+        </main>
         <form action="">
           <fieldset>
             <legend>Book details</legend>
             <div class="book">
               <label for="title">Title: </label>
-              <input type="text" id="title" />
+              <input type="text" id="title" required />
             </div>
             <div class="book">
               <label for="author">Author: </label>
-              <input type="text" id="author" />
+              <input type="text" id="author" required/>
             </div>
             <div class="book">
               <label for="pages">No. of Pages: </label>
-              <input type="number" id="pages" />
+              <input type="number" id="pages" required/>
             </div>
             <div class="book">
               <label for="publisher">Publisher: </label>
-              <input type="text" id="publisher" />
+              <input type="text" id="publisher" required/>
             </div>
             <div class="bo">
               <input type="checkbox" id="read" value="yes" />
               <label for="read">Have you read it?</label>
+              <input type="submit" value="Add Book" />
             </div>
-            <input type="submit" value="Add Book" />
+            
           </fieldset>
         </form>
         <button class="add-new">ADD NEW BOOK</button>
