Changed script file to use classes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="add-new">ADD NEW BOOK</button>
       </div>
   
-      <script src="script.js"></script>
+      <script src="scripts.js"></script>
     
 </body>
 </html>
